2008-03-21  Sebastien Pouliot  <sebastien@ximian.com> 

	* corlib_test.dll.sources: Add unit tests for EqualityComparer

2008-03-14  Zoltan Varga  <vargaz@gmail.com>

	* corlib.dll.sources: Add System.Reflection.Emit/FieldOnTypeBuilderInst.cs.

2008-03-04  Sebastien Pouliot  <sebastien@ximian.com> 

	* corlib.dll.sources: Add internal System.Resources.RuntimeResourceSet
	to the build.
	* corlib_test.dll.sources: Add unit tests for ResourceSet

2008-02-18  Zoltan Varga  <vargaz@gmail.com>

	* corlib_test.dll.sources: Add System.Reflection/CustomAttributeDataTest.cs.

2008-02-17  Raja R Harinath  <harinath@hurrynot.org>

	* Makefile (LIBRARY_COMPILE) [net_2_1]: Remove special case.

2008-01-13  Gert Driesen  <drieseng@users.sourceforge.net>

	* corlib_test.dll.sources: added ReadOnlyCollectionTest.cs.

2007-12-31  Gert Driesen  <drieseng@users.sourceforge.net>

	* corlib_test.dll.sources: added Consts.cs.

2007-12-04  Gert Driesen  <drieseng@users.sourceforge.net>

	* corlib_test.dll.sources: added ExternalExceptionTest.cs.

2007-11-21  Atsushi Enomoto  <atsushi@ximian.com>

	* corlib.dll.sources: added System.Deployment.Internal and
	  System.Runtime sources.

2007-11-16  Atsushi Enomoto  <atsushi@ximian.com>

	* corlib_test.dll.sources : added S.R.E/SignatureHelperTest.cs.

2007-11-13  Zoltan Varga  <vargaz@gmail.com>

	* corlib.dll.sources: Add System/GCCollectionMode.cs and System/GCLatencyMode.cs.

2007-09-14  Jb Evain  <jbevain@novell.com>

	* Makefile: force the use of the 2.0 mscorlib to compile
	the 2.1 mscorlib.dll.

2007-08-23  Robert Jordan  <robertj@gmx.net>

	* corlib.dll.sources: Added MemberInfoSerializationHolder.cs.

2007-08-22  Atsushi Enomoto  <atsushi@ximian.com>

	* corlib_test.dll.sources : added ChannelServicesTest.cs.

2007-08-15  Atsushi Enomoto  <atsushi@ximian.com>

	* corlib.dll.sources : added CustomErrorsModes.cs.

2007-08-13  Gert Driesen  <drieseng@users.sourceforge.net>
