@@ -68,6 +68,7 @@ System.Globalization/DaylightTimeTest.cs
 System.Globalization/EastAsianLunisolarCalendarTest.cs
 System.Globalization/IdnMappingTest.cs
 System.Globalization/RegionInfoTest.cs
+System.Globalization/SortKeyTest.cs
 System.Globalization/StringInfoTest.cs
 System.Globalization/TextInfoTest.cs
 System/GuidTest.cs
