@@ -1,3 +1,7 @@
+2008-04-02  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* SortKey.cs : check null arguments. Fixed bug #376171.
+
 2007-07-20  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* create-mscompat-collation-table.cs : I wonder how long its build
