@@ -1,3 +1,7 @@
+2008-04-02  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* corlib_test.dll.sources : added SortKeyTest.cs.
+
 2008-03-21  Sebastien Pouliot  <sebastien@ximian.com> 
 
 	* corlib_test.dll.sources: Add unit tests for EqualityComparer
